--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,5 @@
 {
   "workbench.colorCustomizations": {
-    "statusBar.background": "#121016",
-    "statusBar.debuggingBackground": "#121016",
-    "statusBar.debuggingForeground": "#525156",
-    "debugToolBar.background": "#121016",
-    "activityBar.background": "#4A0F63",
-    "titleBar.activeBackground": "#67158A",
-    "titleBar.activeForeground": "#FCF8FE"
+    "debugToolBar.background": "#121016"
   }
 }
