--- a/.prettierrc
+++ b/.prettierrc
@@ -1,17 +1,4 @@
 {
   "singleQuote": true,
-  "trailingComma": "all",
-  "prettier/prettier": [
-    "error",
-    {
-      "endOfLine": "auto"
-    },
-    {
-      "usePrettierrc": false
-    },
-    {
-      "singleQuote": true,
-      "parser": "flow"
-    }
-  ]
+  "trailingComma": "all"
 }
